feat(articles-http-v1): better endpoints info
