# docs/swagger.json
@@ -19,11 +19,22 @@
                     "application/json"
                 ],
                 "summary": "Creates an article",
+                "parameters": [
+                    {
+                        "description": "article to create",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.createArticleRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Article"
+                            "$ref": "#/definitions/v1.articlesResponse"
                         }
                     },
                     "400": {
@@ -66,30 +77,36 @@
         }
     },
     "definitions": {
-        "entity.Article": {
+        "v1.articleResponse": {
             "type": "object",
             "properties": {
                 "author_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 42
                 },
                 "content": {
                     "type": "object",
                     "additionalProperties": true
                 },
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2022-10-07T14:26:06.510465Z"
                 },
                 "custom_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "article-url"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1000
                 },
                 "thumbnail": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://smth.com/thumbnail.png"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "How to ..."
                 }
             }
         },
@@ -99,8 +116,44 @@
                 "articles": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.Article"
+                        "$ref": "#/definitions/v1.articleResponse"
                     }
+                }
+            }
+        },
+        "v1.createArticleRequest": {
+            "type": "object",
+            "required": [
+                "author_id",
+                "content",
+                "custom_id",
+                "thumbnail",
+                "title"
+            ],
+            "properties": {
+                "author_id": {
+                    "type": "integer",
+                    "example": 42
+                },
+                "content": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "custom_id": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3,
+                    "example": "article-url"
+                },
+                "thumbnail": {
+                    "type": "string",
+                    "example": "https://smth.com/thumbnail.png"
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 150,
+                    "minLength": 5,
+                    "example": "How to ..."
                 }
             }
         },
