# internal/controller/http/v1/articles.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 	"shuryak-blog/internal/entity"
 	"shuryak-blog/internal/usecase"
+	"time"
 )
 
 type articlesRoutes struct {
@@ -24,7 +25,7 @@ func newArticlesRoutes(handler *gin.RouterGroup, a usecase.Article) {
 }
 
 type articlesResponse struct {
-	Articles []entity.Article `json:"articles"`
+	Articles []articleResponse `json:"articles"`
 }
 
 // @Summary Gets all articles
@@ -42,24 +43,47 @@ func (r *articlesRoutes) getAll(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, articlesResponse{articles})
+	ar := make([]articleResponse, len(articles))
+	for i, a := range articles {
+		ar[i] = articleResponse{
+			Id:        a.Id,
+			CustomId:  a.CustomId,
+			AuthorId:  a.AuthorId,
+			Title:     a.Title,
+			Thumbnail: a.Thumbnail,
+			Content:   a.Content,
+			CreatedAt: a.CreatedAt,
+		}
+	}
+
+	c.JSON(http.StatusOK, articlesResponse{ar})
 }
 
 // TODO: make example attr
 type createArticleRequest struct {
-	CustomId  string                 `json:"custom_id" binding:"min=3,max=20,required"`
-	AuthorId  int                    `json:"author_id" binding:"required"`
-	Title     string                 `json:"title" binding:"min=5,max=150,required"`
-	Thumbnail string                 `json:"thumbnail" binding:"url,required"`
+	CustomId  string                 `json:"custom_id" binding:"min=3,max=20,required" example:"article-url"`
+	AuthorId  int                    `json:"author_id" binding:"required" example:"42"`
+	Title     string                 `json:"title" binding:"min=5,max=150,required" example:"How to ..."`
+	Thumbnail string                 `json:"thumbnail" binding:"url,required" example:"https://smth.com/thumbnail.png"`
 	Content   map[string]interface{} `json:"content" binding:"required"`
 }
 
-// TODO: change return
+type articleResponse struct {
+	Id        int                    `json:"id" example:"1000"`
+	CustomId  string                 `json:"custom_id" example:"article-url"`
+	AuthorId  int                    `json:"author_id" example:"42"`
+	Title     string                 `json:"title" example:"How to ..."`
+	Thumbnail string                 `json:"thumbnail" example:"https://smth.com/thumbnail.png"`
+	Content   map[string]interface{} `json:"content"`
+	CreatedAt time.Time              `json:"created_at" example:"2022-10-07T14:26:06.510465Z"`
+}
+
 // @Summary Creates an article
 // @Description Creates an article
 // @Accept json
 // @Produce json
-// @Success 200 {object} entity.Article
+// @Param request body createArticleRequest true "article to create"
+// @Success 200 {object} articlesResponse
 // @Failure 400 {object} response
 // @Failure 500 {object} response
 // @Router /articles/create [post]
@@ -86,5 +110,15 @@ func (r *articlesRoutes) create(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, article)
+	ar := articleResponse{
+		Id:        article.Id,
+		CustomId:  article.CustomId,
+		AuthorId:  article.AuthorId,
+		Title:     article.Title,
+		Thumbnail: article.Thumbnail,
+		Content:   article.Content,
+		CreatedAt: article.CreatedAt,
+	}
+
+	c.JSON(http.StatusOK, ar)
 }
